Mon Jun 28 20:16:54 UTC 2010  Chris Cleeland  <cleeland@ociweb.com>

        * modules/CDT6ProjectCreator.pm:
        * modules/CDT6WorkspaceCreator.pm:
        * templates/cdt6platforms.mpt:
        * templates/cdt6cproject.mpd:
        * templates/cdt6dll.mpt:
        * templates/cdt6lib.mpt:
        * templates/cdt6exe.mpt:
        * templates/cdt6project.mpd:

          Merged in initial EXPERIMENTAL release of CDT6 project
          type generation from the "eclipse" branch.

        * docs/html/CDT6.html:
        * docs/templates/cdt6project.txt:
        * docs/templates/cdt6cproject.txt:

          Draft documentation on the project type.

        * config/global.mpb:

          Modification to allow specification of threads.

        * devtools/document_template.pl:

          Modified to allow use for generating a stubbed out template
          variable document.
        
        * modules/TemplateParser.pm:
        
          Added functions create_aux_file/end_aux_file, translate_vars,
          and convert_slashes.

Mon Jun 28 18:01:08 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * modules/WorkspaceCreator.pm:
        
          Reverted change below.

Mon Jun 28 16:26:00 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * modules/WorkspaceCreator.pm:

          Bug fix where the negated types in excludes () were not
          handled correctly.

Mon Jun 28 05:55:54 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * templates/wix.mpd:

          The Id attribute for the exename/sharedname was not normalized.

Mon Jun 28 05:42:48 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * templates/wix.mpd:

          Bug fix where the generated Id for the File element contained
          invalid characters.

Mon Jun 28 04:46:49 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * templates/wix.mpd:

          Bug fix where the File element used the auto-generated Id